--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,11 @@
 @import "blocks/main/services.scss";
 @import "blocks/main/blogBanner.scss";
 @import "blocks/main/masters.scss";
+@import "blocks/main/statistics.scss";
+@import "blocks/main/reviews.scss";
+@import "blocks/main/articles.scss";
+@import "blocks/main/clients.scss";
+
+@import "blocks/footer.scss";
+
+@import "base/animations";
