--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,6 +6,7 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 18px;
   line-height: 150%;
+  position: relative;
   @media screen and (max-width: 1440px) {
     font-size: 14px;
   }
@@ -17,11 +18,88 @@ body {
   margin-right: auto;
   padding-left: 80px;
   padding-right: 80px;
+
+  @media screen and (max-width: 1024px) {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  @media screen and (max-width: 768px) {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  @media screen and (max-width: 480px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+.block-title {
+  margin-bottom: 10px;
+  font-family: "Jost", sans-serif;
+  font-size: 45px;
+  line-height: 54px;
+  color: $dark-green;
+  @media screen and (max-width: 1024px) {
+    text-align: center;
+  }
+}
+.block-subtitle {
+  font-family: "Ibarra Real Nova", serif;
+  font-style: italic;
+  font-size: 19px;
+  line-height: 28px;
+  color: $smoke;
+  @media screen and (max-width: 1024px) {
+    text-align: center;
+  }
 }
 
 .swiper-hero,
-.swiper-services {
+.swiper-services,
+.swiper-reviews,
+.swiper-clients {
   overflow: hidden;
   position: relative;
   user-select: none;
+}
+
+.swiper-pagination-bullet {
+  width: 25px;
+  height: 25px;
+  background-color: transparent;
+  position: relative;
+  opacity: 1;
+
+  &:hover {
+    svg mask circle {
+      stroke: #fff;
+      animation: dash 1s linear forwards;
+    }
+  }
+}
+
+.swiper-pagination-bullet {
+  svg mask circle {
+    stroke: #fff;
+    stroke-dashoffset: 125.6;
+    // animation: noDash 0.4s linear forwards;
+  }
+}
+
+.swiper-pagination-bullet-active {
+  svg mask circle {
+    stroke: #fff;
+    stroke-dashoffset: 125.6;
+    animation: dash 0.6s linear forwards;
+  }
+}
+
+.animation-scissors-move {
+  animation: scissors-move 2s linear forwards;
+}
+.animation-scissors-top {
+  animation: scissors-top 0.6s linear;
+}
+.animation-scissors-bottom {
+  animation: scissors-bottom 0.6s linear;
 }
