--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -19,15 +19,21 @@
     top: 50%;
     left: 0;
   }
+
+  @media screen and (max-width: 1024px) {
+    height: 84px;
+    background-color: rgba(255, 255, 255, 1);
+  }
 }
 
-.header {
-  .header__top,
-  .header__bottom {
-    height: 50%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header__top,
+.header__bottom {
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @media screen and (max-width: 1024px) {
+    height: 100%;
   }
 }
 
@@ -47,6 +53,12 @@
     &::after {
       animation: linkUnderline 300ms linear forwards;
     }
+  }
+}
+
+.header__bottom {
+  @media screen and (max-width: 1024px) {
+    display: none;
   }
 }
 
@@ -89,6 +101,9 @@
 .header__top .header__phone {
   display: flex;
   gap: 4px;
+  @media screen and (max-width: 1024px) {
+    display: none;
+  }
 
   a {
     font-style: italic;
