--- a/css/styles.css
+++ b/css/styles.css
@@ -454,18 +454,18 @@ body {
 .hero-1,
 .hero-2,
 .hero-3 {
-  background-image: url("public/img/home/hero/hero_bg_1.jpg");
+  background-image: url("../public/img/home/hero/hero_bg_1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .hero-2 {
-  background-image: url("public/img/home/hero/hero_bg_2.jpg");
+  background-image: url("../public/img/home/hero/hero_bg_2.jpg");
 }
 
 .hero-3 {
-  background-image: url("public/img/home/hero/hero_bg_3.jpg");
+  background-image: url("../public/img/home/hero/hero_bg_3.jpg");
 }
 
 .swiper-hero {
@@ -1235,7 +1235,7 @@ body {
   padding-top: 149px;
   padding-bottom: 137px;
   background-color: #1f261e;
-  background-image: url("/public/img/footer/footer_bg.png");
+  background-image: url("../public/img/footer/footer_bg.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
