--- a/scss/blocks/main/hero.scss
+++ b/scss/blocks/main/hero.scss
@@ -57,17 +57,17 @@
 .hero-1,
 .hero-2,
 .hero-3 {
-  background-image: url("public/img/home/hero/hero_bg_1.jpg");
+  background-image: url("../public/img/home/hero/hero_bg_1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 .hero-2 {
-  background-image: url("public/img/home/hero/hero_bg_2.jpg");
+  background-image: url("../public/img/home/hero/hero_bg_2.jpg");
 }
 
 .hero-3 {
-  background-image: url("public/img/home/hero/hero_bg_3.jpg");
+  background-image: url("../public/img/home/hero/hero_bg_3.jpg");
 }
 
 .swiper-hero {
