--- a/scss/blocks/footer.scss
+++ b/scss/blocks/footer.scss
@@ -4,7 +4,7 @@
   padding-top: 149px;
   padding-bottom: 137px;
   background-color: $dark-green;
-  background-image: url("../public/img/footer/footer_bg.png");
+  background-image: url("../public/img/footer/footer_bg.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
