--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap");
+@font-face {
+  font-family: "Jost";
+  src: url("/public/fonts/Jost-Regular.ttf");
+}
+@font-face {
+  font-family: "Inter";
+  src: url("/public/fonts/Inter-Regular.ttf");
+}
+@font-face {
+  font-family: "Ibarra Real Nova";
+  src: url("/public/fonts/IbarraRealNova-Regular.ttf");
+}
 
 body {
   font-family: "Inter", sans-serif;
