--- a/css/styles.css
+++ b/css/styles.css
@@ -128,15 +128,15 @@ legend {
 
 @font-face {
   font-family: "Jost";
-  src: url("/public/fonts/Jost-Regular.ttf");
+  src: url("../public/fonts/Jost-Regular.ttf");
 }
 @font-face {
   font-family: "Inter";
-  src: url("/public/fonts/Inter-Regular.ttf");
+  src: url("../public/fonts/Inter-Regular.ttf");
 }
 @font-face {
   font-family: "Ibarra Real Nova";
-  src: url("/public/fonts/IbarraRealNova-Regular.ttf");
+  src: url("../public/fonts/IbarraRealNova-Regular.ttf");
 }
 body {
   font-family: "Inter", sans-serif;
