--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,14 +1,14 @@
 @font-face {
   font-family: "Jost";
-  src: url("/public/fonts/Jost-Regular.ttf");
+  src: url("../public/fonts/Jost-Regular.ttf");
 }
 @font-face {
   font-family: "Inter";
-  src: url("/public/fonts/Inter-Regular.ttf");
+  src: url("../public/fonts/Inter-Regular.ttf");
 }
 @font-face {
   font-family: "Ibarra Real Nova";
-  src: url("/public/fonts/IbarraRealNova-Regular.ttf");
+  src: url("../public/fonts/IbarraRealNova-Regular.ttf");
 }
 
 body {
